ecmascript/parser/tests/test262-error-references/fail/d0804b4856dbb6be.module.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/d0804b4856dbb6be.module.js:2:1
  |
2 | <!--
  | ^

